Refactoring for Java 8+ and backporting functionality